--- a/content/posts/你好千寻.md
+++ b/content/posts/你好千寻.md
@@ -9,14 +9,14 @@ tags:
 - 千寻小姐
 - 影评
 - 随笔
-title: 你好，千寻
+title: 你好，千寻小姐
 toc: true
 image: /posts/你好千寻/P2888413690.png
 ---
 
 {{<douban type="movie" id="35791966">}}
 
-豆瓣上的观影记录映入眼帘的那一刻，我突然意识到，看 [《疾速追杀4》](https://movie.douban.com/subject/33455421/) 居然是五月份的事情啦，而六月份到目前为止仅仅看过[《千寻小姐》](https://movie.douban.com/subject/35791966/) 这部电影，甚至今年连去电影院的次数都屈指可数，我想，这大概能证明我此刻忙碌与困顿交织在一起的心境。在某一趟下班回家的地铁上，在被各种电子设备围剿的某时某刻，我果然还是决定要再写点什么。从某种意义上来讲，工作日的白天本不属于自己，而现在，甚至连夜晚都不属于自己，那种彻底地放空大脑、任由思绪汪洋恣肆的境界，不知不觉间竟变成了一件奢侈品。或许，这一切需要经过一场雨水的冲刷方能如愿，当我独自游走在雨声淅淅的街头时，我不由得地问自己，我该用什么样的语言来描摹这一刻，正如薛定谔的那只处于死猫和活猫叠加状态的猫一样，当一种情感难以言说的时候，我还是决定将它写下来。
+豆瓣上的观影记录映入眼帘的那一刻，我突然意识到，看 [《疾速追杀4》](https://movie.douban.com/subject/33455421/) 居然是五月份的事情啦，而六月份到目前为止仅仅看过[《千寻小姐》](https://movie.douban.com/subject/35791966/) 这部电影，甚至今年连去电影院的次数都屈指可数，我想，这大概能证明我此刻忙碌与困顿交织在一起的心境。在某一趟下班回家的地铁上，在被各种电子设备围剿的某时某刻，我果然还是决定要再写点什么。从某种意义上来讲，工作日的白天本不属于自己，而现在，甚至连夜晚都不属于自己，那种彻底地放空大脑、任由思绪汪洋恣肆的境界，不知不觉间竟变成了一件奢侈品。或许，这一切需要经过一场雨水的冲刷方能如愿，当我独自游走在雨声淅淅的街头时，我不由得地问自己，我该用什么样的语言来描摹这一刻，正如薛定谔的那只处于死猫和活猫叠加状态的猫一样，当一种情感难以言说的时候，我还是习惯将它写下来。
 
 {{<douban type="movie" id="34874432">}}
 
@@ -35,7 +35,7 @@ image: /posts/你好千寻/P2888413690.png
 ![《千寻小姐》剧照：名人的名场面](/posts/你好千寻/P2889343137.jpg)
 
 
-可偏偏就是这样一个“**名人**”，她喜欢跪坐在地上和流浪猫聊天，她喜欢独自一人荡秋千、去海边散步，甚至是送便当给流浪老人、陪老人吃饭、帮老人洗澡、送老人衣服。有时候，她会陪高中生冈地和小学生小诚一起玩，在她的影响下，冈地认识了来自“**同一颗星球**”的朋友，而小诚则学会了如何向妈妈表达爱意……在一切事物都向着好的方向发展、当被千寻“**治愈**”的人们围坐在一起其乐融融的时候，随着镜头的推移旋转，千寻却不知在何时悄然离去，也许，有人知道呢？可谁又知道呢？
+可偏偏就是这样一个“**名人**”，她喜欢跪坐在地上和流浪猫聊天，她喜欢独自一人荡秋千、去海边散步，甚至是送便当给流浪老人、陪老人吃饭、帮老人洗澡、送老人衣服。有时候，她会陪高中生冈地、小学生小诚一起玩，在她的影响下，冈地认识了来自“**同一颗星球**”的朋友，而小诚则学会了如何向妈妈表达爱意……在一切事物都向着好的方向发展、当被千寻“**治愈**”的人们围坐在一起其乐融融的时候，随着镜头的推移旋转，千寻却不知在何时悄然离去，也许，有人知道呢？可谁又知道呢？
 
 ![《千寻小姐》剧照：我能在你旁边站一会儿吗？](/posts/你好千寻/P2888936761.jpg)
 
@@ -48,11 +48,13 @@ image: /posts/你好千寻/P2888413690.png
 ![《千寻小姐》剧照：今天不拍照吗？](/posts/你好千寻/P2888426028.jpg)
 
 
-近些年来，原生家庭这个词汇被频频提起，而从千寻对母亲的态度来看，大概率没有得到父母的关爱和呵护。电影中穿插了一段女主童年时的回忆，彼时的女主曾经遇到过一个名为千寻的风俗女，但对方并没有以一种成年人的视角同女主相处，而是以一种平视的目光将女主视为一个独立个体，更重要的是，她没有因为自身风俗女的身份妄自菲薄，始终用她的善良和耐心温暖着年幼的女主。最终，两人告别时对方留下了自己的名片，这便是女主千寻这个名字的由来。后来，从风俗行业辞职的女主，在一个雨夜认识了前便利店店员多惠阿姨，在得知女主的经历后她并没有表现出特别的诧异，甚至主动提出为女主的便当“**加餐**”。直到后来多惠阿姨因为眼疾而住院的时候，女主便顶替了多惠阿姨在便当店的工作。
+近些年来，原生家庭这个词汇被频频提起，而从千寻对母亲的态度来看，大概率没有得到父母的关爱和呵护。电影中穿插了一段女主童年时的回忆，彼时的女主曾经遇到过一个名为千寻的风俗女，但对方并没有以一种成年人的视角同女主相处，而是以一种平视的目光将女主视为一个独立个体，更重要的是，她没有因为自身风俗女的身份妄自菲薄，始终用她的善良和耐心温暖着年幼的女主。两人告别时，对方留下了自己的名片，这便是女主千寻这个名字的由来。后来，从风俗行业辞职的女主，在一个雨夜认识了前便利店店员多惠阿姨，在得知女主的经历后她并没有表现出特别的诧异，甚至主动提出为女主的便当“**加餐**”，直到后来多惠阿姨因为眼疾而不得不住院，女主决定接替多惠阿姨在便利店的工作。
 
 ![《千寻小姐》剧照：我超想复刻的炒面](/posts/你好千寻/P2889343247.jpg)
 
 
-如果说，在《千与千寻》所描绘的那个神隐世界中，失去原来的名字就意味着再无法回到原来的世界，那么，在《千寻小姐》这部电影里，千寻这个名字就变成了某种符号。对女主而言，不管是童年时期遇到的真·千寻——风俗女千寻，还是雨夜中遇到的“千寻小姐”——便利店店员多惠阿姨，或许都是真正的“千寻小姐”，因为她们都丝毫不吝于向陌生人施以温柔，甚至连女主自己最后都变成了“千寻小姐”，她去不同的地方、换不同的工作、体验不同的生活，即便有时候感觉自己会像金鱼一样沉入水底，她始终都能忠于自我、自由而热烈地活着，也许，你觉得这样子显得太过孤独，可孤独才是这个世界最真实的体验，它无处不在，并非只有你我才有，是一种普遍的人类经验。
+如果说，在《千与千寻》所描绘的那个神隐世界中，失去原来的名字就意味着再无法回到原来的世界，那么，在《千寻小姐》这部电影里，千寻这个名字就变成了某种符号。对女主而言，不管是童年时期遇到的真·千寻——风俗女千寻，还是雨夜中遇到的“千寻小姐”——便利店店员多惠阿姨，或许都是真正的“千寻小姐”，因为她们都丝毫不吝于向陌生人施以温柔，甚至连女主自己最后都变成了“千寻小姐”，她去不同的地方、换不同的工作、体验不同的生活，即便有时候感觉自己会像金鱼一样沉入水底，她始终都能忠于自我、自由而热烈地活着。在电影结尾，女主出现在一家农场，在给奶牛投喂饲料的时候，你说，有没有一种可能，她在用自己的方式饲养着那份遗世独立、不可方物的孤独呢？
 
-![《千寻小姐》剧照](/posts/你好千寻/P2888492221.jpg)
+![《千寻小姐》剧照：死去的海鸟](/posts/你好千寻/P2888492221.jpg)
+
+正如多惠阿姨说得那样，“**你这个人啊，不管走到哪里，始终都有一种孤独感**”，所以，当多惠阿姨发现女主悄悄离开以后，她立刻打电话给女主，劝她留下来，“**你不用这样一直漂泊下去的**”，可女主就像一叶孤舟顺水漂流，遇合尽兴，枯荣随缘，她可以和身边所有人相处融洽，却似乎总是与这个世界显得格格不入。也许，你觉得这样子显得太过孤独，可孤独才是这个世界最真实的体验，它几乎无处不在，并非只有你我才有，是一种普遍而深刻的人类经验，从刀耕火种的远古时期到如今高楼耸立的科技时代，划破黑夜的那束火光或许在不断地变换着形式，可人类的孤独自始至终从未消失过。曾经有学生提问姜文导演，“**您的电影人物为什么到最后总是一个人？为什么要把人放在这么孤独的处境？**”，一个熟悉的声音回应道，“**你以为你最后不是一个人吗？**”，所谓孤独，大抵如此罢！
