--- a/content/posts/前端视频播放技术概览.md
+++ b/content/posts/前端视频播放技术概览.md
@@ -15,10 +15,10 @@ title: 前端视频播放技术概览
 toc: true
 image: /posts/前端视频播放技术概览/pexels-terje-sollie-320617.jpg
 ---
-转眼间，2023 年已进入下半场，在这样一个时间节点下，长视频平台如爱奇艺、优酷、腾讯视频等，以及短视频平台如抖音、快手等，对大家来说早已是司空见惯的事物。然而，在我们追剧、刷弹幕的时候，很少有人会去深入思考这些平台背后的技术奥秘。直到最近，我需要在前端项目中实现视频播放时，我终于意识到，这些视频不仅在格式上存在着差异，甚至连播放形式都各有不同。举个例子，当下最为火热的 “**直播**”，通常是指实时的视频播放。相对应地，非实时的视频播放则被称为 “**点播**”。如果你有接触过 [Netflix]([https://about.netflix.com/zh_cn)，你或许还听说过](https://about.netflix.com/zh_cn)%EF%BC%8C%E4%BD%A0%E6%88%96%E8%AE%B8%E8%BF%98%E5%90%AC%E8%AF%B4%E8%BF%87) “**流媒体**” 这个词汇。为了更好地理解这些概念，我利用空闲时间整理了一个相对完整的技术体系，并以此为基础撰写了今天这篇文章。
+转眼间，2023 年已进入下半场，在这样一个时间节点下，长视频平台如爱奇艺、优酷、腾讯视频等，以及短视频平台如抖音、快手等，对大家来说早已是司空见惯的事物。然而，在我们追剧、刷弹幕的时候，很少有人会去深入思考这些平台背后的技术奥秘。直到最近，我需要在前端项目中实现视频播放时，我终于意识到，这些视频不仅在格式上存在着差异，甚至连播放形式都各有不同。举个例子，当下最为火热的 “**直播**”，通常是指实时的视频播放。相对应地，非实时的视频播放则被称为 “**点播**”。如果你有接触过 [Netflix]([https://about.netflix.com/zh_cn)，你或许还听说过 “**流媒体**” 这个词汇。为了更好地理解这些概念，我利用空闲时间整理了一个相对完整的技术体系，并以此为基础撰写了今天这篇文章。
 
 # 从 HTML5 说起
-好了，现在让我们从最简单的视频播放方案开始说起。在 HTML5 标准发布前，主流的视频播放方案是使用 Adobe 的 [Flash Player]([https://helpx.adobe.com/cn/support/adobe-flash-player-learn-and-support.html](https://helpx.adobe.com/cn/support/adobe-flash-player-learn-and-support.html)) 插件，国内的优酷、土豆等视频网站创立初期都经历过这个阶段。后来，随着乔布斯那封 “关于 Flash 的思考” 的公开信的发表，某种意义上加速了整个 Flash 技术的 “**消亡**”。再后来，随着 HTML5 标准发布，我们可以使用 `video` 或者 `audio` 标签在网页中呈现音/视频内容。如图所示，下面是 `video` 标签的基本用法：
+好了，现在让我们从最简单的视频播放方案开始说起。在 HTML5 标准发布前，主流的视频播放方案是使用 Adobe 的 [Flash Player](https://helpx.adobe.com/cn/support/adobe-flash-player-learn-and-support.html) 插件，国内的优酷、土豆等视频网站创立初期都经历过这个阶段。后来，随着乔布斯那封 “关于 Flash 的思考” 的公开信的发表，某种意义上加速了整个 Flash 技术的 “**消亡**”。再后来，随着 HTML5 标准发布，我们可以使用 `video` 或者 `audio` 标签在网页中呈现音/视频内容。如图所示，下面是 `video` 标签的基本用法：
 
 ```html
 <video controls>
@@ -67,7 +67,7 @@ RTMP，即：**Real Time Messaging Protocol**，是一种以 TCP 协议作为底
 
 ![RTMP 协议基本流程演示](/posts/前端视频播放技术概览/RTMP.drawio.png)
 
-如图所示，是一个 RTMP 的基本流程。可以注意到，其核心在于 “**推流**” 和 “**拉流**”，简单来说，我们可以通过 [FFmpeg]([http://ffmpeg.org](http://ffmpeg.org/)/) 或者 [OBS]([https://obsproject.com](https://obsproject.com/)/) 来向一个 RTMP 服务器推送视频流。此时，运行在用户设备上的 Flash 播放器或者流媒体播放器就可以从 RTMP 服务器上拉取视频流，进而实现视频播放的效果。相较于 HTTP 这种 “**平民化**” 的协议，RTMP 这种视频流协议明显要更复杂一点。幸运的是，我们可以借助 Nginx 及其第三方模块 [nginx-http-flv-module]([https://github.com/winshining/nginx-http-flv-module](https://github.com/winshining/nginx-http-flv-module))、[nginx-rtmp-module]([https://github.com/arut/nginx-rtmp-module.git](https://github.com/arut/nginx-rtmp-module.git)) 快速搭建一个 RTMP 服务器，这里以 nginx-http-flv-module 为例来进行说明：
+如图所示，是一个 RTMP 的基本流程。可以注意到，其核心在于 “**推流**” 和 “**拉流**”，简单来说，我们可以通过 [FFmpeg](http://ffmpeg.org) 或者 [OBS](https://obsproject.com) 来向一个 RTMP 服务器推送视频流。此时，运行在用户设备上的 Flash 播放器或者流媒体播放器就可以从 RTMP 服务器上拉取视频流，进而实现视频播放的效果。相较于 HTTP 这种 “**平民化**” 的协议，RTMP 这种视频流协议明显要更复杂一点。幸运的是，我们可以借助 Nginx 及其第三方模块 [nginx-http-flv-module](https://github.com/winshining/nginx-http-flv-module)、[nginx-rtmp-module](https://github.com/arut/nginx-rtmp-module.git) 快速搭建一个 RTMP 服务器，这里以 nginx-http-flv-module 为例来进行说明：
 
 ```nginx
 rtmp {
@@ -104,7 +104,7 @@ http {
 
 ![通过 VLC 从 RTMP 服务器拉流-A](/posts/前端视频播放技术概览/20230727100113.png)
 
-现在，我们只需要分别在 OBS 和 [VLC]([https://www.videolan.org/vlc](https://www.videolan.org/vlc)/) 配置推流、拉流的地址。这里的推流码以及 `stream` 字段，可以理解为直播的频道或者房间号。只要双方都在一个频道或者房间里，即可实现直播效果：
+现在，我们只需要分别在 OBS 和 [VLC](https://www.videolan.org/vlc) 配置推流、拉流的地址。这里的推流码以及 `stream` 字段，可以理解为直播的频道或者房间号。只要双方都在一个频道或者房间里，即可实现直播效果：
 
 ![通过搭建 RTMP 服务器实现直播效果](/posts/前端视频播放技术概览/20230727100732.png)
 
@@ -124,11 +124,11 @@ ffmpeg -re  -rtsp_transport tcp -i <rtsp地址> -vcodec libx264 -vprofile baseli
 
 言归正传，Flash 的折戟沉沙，直接导致 RTMP 和 RTSP 这对难兄难弟失去了赖以生存的 “**土壤**”。对于 RTMP 来说，其缺点主要是 FLV 与 HTML5 的兼容性问题、带宽问题，人们依然可以使用那些支持 FLV 格式的播放器软件，例如 PotPlayer、KMPlayer、VLC 等等；可对于 RTSP 来说，其本身与 HTTP 不兼容，必须要借助第三方插件，例如 NPAPI/PPAPI、ActiveX 等等。事实上，这些插件在不同浏览上的兼容性并不能得到充分的保证，这样就造成了一个相对混乱的局面。我以为，最重要的原因是，浏览器或者说前端生态圈，缺少像 FFmpeg 一样强大的视频编/解码工具。不过，随着 WebAssembly 等技术的成熟，我相信这一切终有一天会得到改善！
 
-苹果公司在成功 “**驱逐**” Flash 以后，转头就开始开发自家的流媒体协议，这便是后来的 [HLS]([https://datatracker.ietf.org/doc/html/draft-pantos-http-live-streaming-23](https://datatracker.ietf.org/doc/html/draft-pantos-http-live-streaming-23)) 协议，其全称为：**HTTP Live Streaming**，是一种基于 HTTP 的流媒体传输协议，主要用于实时音/视频流的传输。其基本原理是：首先，它会将整个流切割为无数个可以通过 HTTP 下载的小文件。然后，它会向客户端提供一个配套的媒体文件列表。此时，客户端只需要按照顺序拉取和播放媒体文件，即可实现看起来像是在播放一条完整流媒体的效果。也许，你此前从来没有听说过这些内容，可当你在移动设备上播放 `m3u8` 格式的视频时，我想告诉你，你已经同 HLS 见过面啦！实际上，这个说法并不太严谨，因为 `m3u8` 本身就只是一个播放列表，真正的媒体文件其实是那些 `ts`文件。考虑到整个传输层是标准的 HTTP 协议，因此，这个方案可以非常方便地利用 CDN 进行分发、加速。
+苹果公司在成功 “**驱逐**” Flash 以后，转头就开始开发自家的流媒体协议，这便是后来的 [HLS](https://datatracker.ietf.org/doc/html/draft-pantos-http-live-streaming-23) 协议，其全称为：**HTTP Live Streaming**，是一种基于 HTTP 的流媒体传输协议，主要用于实时音/视频流的传输。其基本原理是：首先，它会将整个流切割为无数个可以通过 HTTP 下载的小文件。然后，它会向客户端提供一个配套的媒体文件列表。此时，客户端只需要按照顺序拉取和播放媒体文件，即可实现看起来像是在播放一条完整流媒体的效果。也许，你此前从来没有听说过这些内容，可当你在移动设备上播放 `m3u8` 格式的视频时，我想告诉你，你已经同 HLS 见过面啦！实际上，这个说法并不太严谨，因为 `m3u8` 本身就只是一个播放列表，真正的媒体文件其实是那些 `ts`文件。考虑到整个传输层是标准的 HTTP 协议，因此，这个方案可以非常方便地利用 CDN 进行分发、加速。
 
 # FLV 还是 HLS?
 
-感谢苹果公司，感谢乔布斯，现在我们有了新的选择。类似地，我们可以使用 Nginx 及其第三方模块 [nginx-rtmp-module]([https://github.com/arut/nginx-rtmp-module.git](https://github.com/arut/nginx-rtmp-module.git)) 来搭建一个支持 HLS 协议的流媒体服务器。其基本思路是：通过 OBS 或者 FFmpeg 向 RTMP 服务器推送视频流，服务器端生成对应的 `m3u8` 以及 `ts` 文件，此时，只需要像访问静态资源一样访问 `m3u8` 文件即可。除此之外，你同样可以将事先生成好的 `m3u8` 以及 `ts` 文件放置在指定的目录。首先，我们来定义一个用于推送视频流的路由：
+感谢苹果公司，感谢乔布斯，现在我们有了新的选择。类似地，我们可以使用 Nginx 及其第三方模块 [nginx-rtmp-module](https://github.com/arut/nginx-rtmp-module.git) 来搭建一个支持 HLS 协议的流媒体服务器。其基本思路是：通过 OBS 或者 FFmpeg 向 RTMP 服务器推送视频流，服务器端生成对应的 `m3u8` 以及 `ts` 文件，此时，只需要像访问静态资源一样访问 `m3u8` 文件即可。除此之外，你同样可以将事先生成好的 `m3u8` 以及 `ts` 文件放置在指定的目录。首先，我们来定义一个用于推送视频流的路由：
 
 ```nginx
 rtmp {
@@ -152,7 +152,7 @@ http {
     server {
         location /hls {
             types {
-                application/[vnd.apple](http://vnd.apple/).mpegurl m3u8;
+                application/vnd.apple.mpegurl m3u8;
             }
             alias /tmp/hls;
             add_header Access-Control-Allow-Credentials true;
@@ -178,10 +178,10 @@ http {
 
 曾几何时，乔帮主炮轰 Flash，主要的观点是：Flash 在移动设备上性能差影响电池续航；Flash 是为个人电脑和鼠标设计的，并不适用于触屏和手指。多年以后，回头来再看这段，当年乔布斯的确做了一个正确的决定，越来越多的原生应用被 Web 技术代替，React Native、Flutter、Electron、Taro...等技术的流行，大抵都在证明 Web/HTML5 是大势所趋、是不可违逆的历史潮流。如今，当我们用前端技术去构建 App 和小程序时，这些曾经游走在原生应用中的历史遗留问题，终于要再次浮出水面。
 
-幸运的是，我们生活在一个技术高度发展的年代，作为 Flash 时代的遗产，浏览器本身是不支持 FLV 格式的，直到盛行二次元文化的 B 站开源了 [flv.js]([https://github.com/Bilibili/flv.js/)，这让在前端播放](https://github.com/Bilibili/flv.js/)%EF%BC%8C%E8%BF%99%E8%AE%A9%E5%9C%A8%E5%89%8D%E7%AB%AF%E6%92%AD%E6%94%BE) FLV 格式的视频成为可能，我们继续使用前面 RTMP 直播的示例来演示这部分功能。首先，我们准备一个简单的 HTML 结构，同时在页面中引入 flv.js ：
+幸运的是，我们生活在一个技术高度发展的年代，作为 Flash 时代的遗产，浏览器本身是不支持 FLV 格式的，直到盛行二次元文化的 B 站开源了 [flv.js](https://github.com/Bilibili/flv.js/)，这让在前端播放 FLV 格式的视频成为可能，我们继续使用前面 RTMP 直播的示例来演示这部分功能。首先，我们准备一个简单的 HTML 结构，同时在页面中引入 flv.js ：
 
 ```html
-<script src="[https://cdn.bootcdn.net/ajax/libs/flv.js/1.5.0/flv.min.js](https://cdn.bootcdn.net/ajax/libs/flv.js/1.5.0/flv.min.js)"></script>
+<script src="https://cdn.bootcdn.net/ajax/libs/flv.js/1.5.0/flv.min.js"></script>
 <video id="videoElement" controls autoplay width="100%" height="100%"></video>
 ```
 
@@ -194,11 +194,11 @@ http {
         var flvPlayer = flvjs.createPlayer({
             type: 'flv',
             isLive:true,
-            url: '[http://127.0.0.1:50001/pullLive?port=1935&app=pushLive&stream=test](http://127.0.0.1:50001/pullLive?port=1935&app=pushLive&stream=test)'
+            url: 'http://127.0.0.1:50001/pullLive?port=1935&app=pushLive&stream=test'
         });
         flvPlayer.attachMediaElement(videoElement);
         flvPlayer.load();
-[flvPlayer.play](http://flvplayer.play/)();
+        flvPlayer.play();
     }
 </script>
 ```
@@ -207,17 +207,17 @@ http {
 
 ![通过 flv.js 播放 RTMP 视频流](/posts/前端视频播放技术概览/20230728152447.png)
 
-类似地，对于 HLS 协议的视频流，我们可以使用 [hls.js]([https://github.com/video-dev/hls.js](https://github.com/video-dev/hls.js)/) 从前端承载一个实时的视频流:
+类似地，对于 HLS 协议的视频流，我们可以使用 [hls.js](https://github.com/video-dev/hls.js) 从前端承载一个实时的视频流:
 
 ```html
-<script src="[https://cdn.jsdelivr.net/npm/hls.js@latest](https://cdn.jsdelivr.net/npm/hls.js@latest)"></script>
+<script src="https://cdn.jsdelivr.net/npm/hls.js@latest"></script>
 <video id="video"></video>
 <script>
     if (Hls.isSupported()) {
       var video = document.getElementById('video');
       hls.attachMedia(video);
       hls.on(Hls.Events.MEDIA_ATTACHED, function () {
-        hls.loadSource('[http://127.0.0.1:50002/hls/test.m3u8](http://127.0.0.1:50002/hls/test.m3u8)');
+        hls.loadSource('http://127.0.0.1:50002/hls/test.m3u8');
         hls.on(Hls.Events.MANIFEST_PARSED, function (event, data) {
           console.log('manifest loaded, found ' + data.levels.length + ' quality level');
         });
@@ -233,7 +233,9 @@ http {
 
 # WebRTC 的期冀
 
-行文至此，关于流媒体的前世今生，其实已经基本厘清，甚至我们还能从尘埃往事中读出历史惊人的相似性，正如苹果公司开发 HLS 协议是为了挣脱 Flash 的摆布，可即便有乔布斯那样极具远见的战略眼光，依然阻挡不了 HTML5 那如潮水一般涌来的 “**大势所趋**”。也许，后人有一天会像嫌弃 Flash 一样嫌弃 HLS。技术的进步，始终是一件掺杂着期许和遗憾的事情，甚至于连同此时此刻都永远不是终点。所以，接下来我想聊一聊实时音/视频通信的未来——WebRTC。回想过去三年的疫情，催生出大量网课/在线教育、视频会议、远程办公……等方面的需求，而 WebRTC 这样一个支持实时音/视频通信的开放标准，天然地拟合着这些业务方向，如前文所述，虽然利用 Nginx 搭建一个流媒体服务器并不算太难，可如果想要在当下的网络环境中做到低延迟，还是需要投入大量的精力去做进一步的优化。关于 WebRTC 的细节，大家可以自行检索，这里推荐一个更成熟的流媒体服务器 SRS，它可以支持本文中提及的所有协议，最最最重要的是它支持 WebRTC 协议。所以，下面我们利用 SRS 来快速搭建一个 WebRTC 的示例，可以让大家提前感受一下 WebRTC 的魅力：
+行文至此，关于流媒体的前世今生，其实已经基本厘清，甚至我们还能从尘埃往事中读出历史惊人的相似性，正如苹果公司开发 HLS 协议是为了挣脱 Flash 的摆布，可即便有乔布斯那样极具远见的战略眼光，依然阻挡不了 HTML5 那如潮水一般涌来的 “**大势所趋**”。也许，后人有一天会像嫌弃 Flash 一样嫌弃 HLS。技术的进步，始终是一件掺杂着期许和遗憾的事情，甚至于连同此时此刻都永远不是终点。所以，接下来我想聊一聊实时音/视频通信的未来——[WebRTC](https://developer.mozilla.org/zh-CN/docs/Web/API/WebRTC_API/Protocols)。
+
+回想过去三年的疫情，催生出大量网课/在线教育、视频会议、远程办公……等方面的需求，而 WebRTC 这样一个支持实时音/视频通信的开放标准，天然地拟合着这些业务方向，如前文所述，虽然利用 Nginx 搭建一个流媒体服务器并不算太难，可如果想要在当下的网络环境中做到低延迟，还是需要投入大量的精力去做进一步的优化。关于 WebRTC 的细节，大家可以自行检索，这里推荐一个更成熟的流媒体服务器 [SRS](https://ossrs.net/lts/zh-cn/)，它可以支持本文中提及的所有协议，最最最重要的是它支持 WebRTC 协议。所以，下面我们利用 SRS 来快速搭建一个 WebRTC 的示例，可以让大家提前感受一下 WebRTC 的魅力：
 
 ```bash
 docker run --rm --env CANDIDATE=<Your_IP> -p 1935:1935 -p 8080:8080 -p 1985:1985 -p 8000:8000/udp registry.cn-hangzhou.aliyuncs.com/ossrs/srs:4 objs/srs -c conf/rtmp2rtc.conf
@@ -245,14 +247,15 @@ docker run --rm --env CANDIDATE=<Your_IP> -p 1935:1935 -p 8080:8080 -p 1985:1985
 docker run --rm -it registry.cn-hangzhou.aliyuncs.com/ossrs/srs:encoder ffmpeg -stream_loop -1 -re -i doc/source.flv -c copy -f flv rtmp://host.docker.internal/live/livestream
 ```
 
-接下来，我们同样参照官方示例，运行一个 FFmpeg 的容器示例，它负责将内置的一个 FLV 格式的视频文件推送到 RTMP 服务器上。这里的 RTMP 服务器，其实就是 SRS 容器实例。可以注意到，FFmpeg 确实指向了一个 rtmp:// 开头的地址。当然，在掌握了这些原理以后，你可以继续使用 OBS 推送视频流。对程序员来说，不会/记不住命令行这件小事，实在是无伤大雅。因为在真理面前，一切不过都是工具罢了，甚至连你我都是，不是吗？
+接下来，我们同样参照官方示例，运行一个 FFmpeg 的容器示例，它负责将内置的一个 FLV 格式的视频文件推送到 RTMP 服务器上。这里的 RTMP 服务器，其实就是 SRS 容器实例。可以注意到，FFmpeg 确实指向了一个 `rtmp://` 开头的地址。当然，在掌握了这些原理以后，你可以继续使用 OBS 推送视频流。对程序员来说，不会/记不住命令行这件小事，实在是无伤大雅。因为在真理面前，一切不过都是工具罢了，甚至连你我都是，不是吗？
+
+![通过 SRS 实现 RTMP 转 WebRTC 效果演示](/posts/前端视频播放技术概览/2023-07-29T06-07-35.129Z.png)
 
 
+此时，我们打开浏览器，就可以在 WebRTC 播放器中看到对应的视频。因为主流的浏览器基本都支持 WebRTC ，所以，你不需要再像以前一样借助第三方库或者插件，就可以直接播放视频。从实际的效果来看，除了画质有点模糊以外，整体表现要比 FLV 和 HLS 出色。博主认为，**前端值得探索的方向还有更多，譬如 WebAssembly、WebGL、IoT、跨平台/跨端技术等等，如果始终局限在写页面，则永远是没有出路的**。最近这几年 “前端已死” 的声音不绝于耳，不知道屏幕前的诸位作何感想呢？
 
-此时，我们打开浏览器，就可以在 WebRTC 播放器中看到对应的视频。因为主流的浏览器基本都支持 WebRTC ，所以，你不需要再像以前一样借助第三方库或者插件，就可以直接播放视频。从实际的效果来看，除了画质有点模糊以外，整体表现要比 FLV 和 HLS 出色。博主认为，前端值得探索的方向还有更多，譬如 WebAssembly、WebGL、IoT、跨平台/跨端技术等等，如果始终局限在写页面，则是永远没有出路的。最近这几年 “前端已死” 的声音不绝于耳，不知道屏幕前的诸位作何感想呢？
 
-
-写文章写到凌晨的时候，我的疲倦早已所剩无几，起初选择这个方向的时候，我更多的是关注前端、关注我需要解决的问题。可等我梳理清这些知识脉络以后，我发现它的知识点远比我想象中的密集、庞杂。因此，整篇博客基本上就是在查资料和做实验交替进行的情况下写出来的。本文先后介绍了 HTML5 中的视频播放技术、RTMP/RTSP这类传统的视频流协议、HTTP-FLV/HLS这类基于 HTTP 的自适应协议，以及属于未来的新技术 WebRTC。在这个过程中，博主提到了 Flash 的衰落、HTML5 的崛起，即便你对于技术话题百分百无感，这些互联网世界里的奇闻佚事，或许还有机会成为一种怀念。而对于我说，如何在专业和活泼两者间完成取舍，同样是一件值得思考的事情，就像视频播放总要在带宽、画质、延迟、流量……这些因素上单独权衡一样，本文完！
+写文章写到凌晨的时候，我的疲倦早已所剩无几，起初选择这个方向的时候，我更多的是关注前端、关注我需要解决的问题。可等我梳理清这些知识脉络以后，我发现它的知识点远比我想象中的密集、庞杂。因此，整篇博客基本上就是在查资料和做实验交替进行的情况下写出来的。本文先后介绍了 HTML5 中的视频播放技术、RTMP/RTSP这类传统的视频流协议、HTTP-FLV/HLS这类基于 HTTP 的自适应协议，以及属于未来的新技术 WebRTC。在这个过程中，博主提到了 Flash 的衰落、HTML5 的崛起，即便你对于技术话题百分百无感，这些互联网世界里的奇闻佚事，或许还有机会成为一种怀念。而对于我说，如何在专业和活泼两者间完成取舍，同样是一件值得思考的事情，就像视频播放总要在带宽、画质、延迟、流量等因素上综合权衡一样。
 
 # 参考文章
 * [实时传输 Web 音频与视频]([https://developer.mozilla.org/zh-CN/docs/Web/Guide/Audio_and_video_delivery/Live_streaming_web_audio_and_video](https://developer.mozilla.org/zh-CN/docs/Web/Guide/Audio_and_video_delivery/Live_streaming_web_audio_and_video))
