--- a/content/posts/前端视频播放技术概览.md
+++ b/content/posts/前端视频播放技术概览.md
@@ -124,6 +124,8 @@ ffmpeg -re  -rtsp_transport tcp -i <rtsp地址> -vcodec libx264 -vprofile baseli
 
 言归正传，Flash 的折戟沉沙，直接导致 RTMP 和 RTSP 这对难兄难弟失去了赖以生存的 “**土壤**”。对于 RTMP 来说，其缺点主要是 FLV 与 HTML5 的兼容性问题、带宽问题，人们依然可以使用那些支持 FLV 格式的播放器软件，例如 PotPlayer、KMPlayer、VLC 等等；可对于 RTSP 来说，其本身与 HTTP 不兼容，必须要借助第三方插件，例如 NPAPI/PPAPI、ActiveX 等等。事实上，这些插件在不同浏览上的兼容性并不能得到充分的保证，这样就造成了一个相对混乱的局面。我以为，最重要的原因是，浏览器或者说前端生态圈，缺少像 FFmpeg 一样强大的视频编/解码工具。不过，随着 WebAssembly 等技术的成熟，我相信这一切终有一天会得到改善！
 
+{{< linkcard href="https://github.com/ffmpegwasm/ffmpeg.wasm" title="ffmpeg.wasm" desc="github.com/ffmpegwasm/ffmpeg.wasm" >}}
+
 苹果公司在成功 “**驱逐**” Flash 以后，转头就开始开发自家的流媒体协议，这便是后来的 [HLS]([https://datatracker.ietf.org/doc/html/draft-pantos-http-live-streaming-23](https://datatracker.ietf.org/doc/html/draft-pantos-http-live-streaming-23)) 协议，其全称为：**HTTP Live Streaming**，是一种基于 HTTP 的流媒体传输协议，主要用于实时音/视频流的传输。其基本原理是：首先，它会将整个流切割为无数个可以通过 HTTP 下载的小文件。然后，它会向客户端提供一个配套的媒体文件列表。此时，客户端只需要按照顺序拉取和播放媒体文件，即可实现看起来像是在播放一条完整流媒体的效果。也许，你此前从来没有听说过这些内容，可当你在移动设备上播放 `m3u8` 格式的视频时，我想告诉你，你已经同 HLS 见过面啦！实际上，这个说法并不太严谨，因为 `m3u8` 本身就只是一个播放列表，真正的媒体文件其实是那些 `ts`文件。考虑到整个传输层是标准的 HTTP 协议，因此，这个方案可以非常方便地利用 CDN 进行分发、加速。
 
 # FLV 还是 HLS?
