--- a/content/posts/前端视频播放技术概览.md
+++ b/content/posts/前端视频播放技术概览.md
@@ -239,7 +239,7 @@ http {
 
 行文至此，关于流媒体的前世今生，其实已经基本厘清，甚至我们还能从尘埃往事中读出历史惊人的相似性，正如苹果公司开发 HLS 协议是为了挣脱 Flash 的摆布，可即便有乔布斯那样极具远见的战略眼光，依然阻挡不了 HTML5 那如潮水一般涌来的 “**大势所趋**”。也许，后人有一天会像嫌弃 Flash 一样嫌弃 HLS。技术的进步，始终是一件掺杂着期许和遗憾的事情，甚至于连同此时此刻都永远不是终点。所以，接下来我想聊一聊实时音/视频通信的未来——[WebRTC](https://developer.mozilla.org/zh-CN/docs/Web/API/WebRTC_API/Protocols)。
 
-
+{{< linkcard href="https://ossrs.net/lts/zh-cn/" title="SRS" desc="Simple Realtime Server" cover="https://ossrs.net/lts/zh-cn/img/srs-server-no-border.png">}}
 
 回想过去三年的疫情，催生出大量网课/在线教育、视频会议、远程办公……等方面的需求，而 WebRTC 这样一个支持实时音/视频通信的开放标准，天然地拟合着这些业务方向，如前文所述，虽然利用 Nginx 搭建一个流媒体服务器并不算太难，可如果想要在当下的网络环境中做到低延迟，还是需要投入大量的精力去做进一步的优化。关于 WebRTC 的细节，大家可以自行检索，这里推荐一个更成熟的流媒体服务器 [SRS](https://ossrs.net/lts/zh-cn/)，它可以支持本文中提及的所有协议，最最最重要的是它支持 WebRTC 协议。所以，下面我们利用 SRS 来快速搭建一个 WebRTC 的示例，可以让大家提前感受一下 WebRTC 的魅力：
 
@@ -264,8 +264,10 @@ docker run --rm -it registry.cn-hangzhou.aliyuncs.com/ossrs/srs:encoder ffmpeg -
 写文章写到凌晨的时候，我的疲倦早已所剩无几，起初选择这个方向的时候，我更多的是关注前端、关注我需要解决的问题。可等我梳理清这些知识脉络以后，我发现它的知识点远比我想象中的密集、庞杂。因此，整篇博客基本上就是在查资料和做实验交替进行的情况下写出来的。本文先后介绍了 HTML5 中的视频播放技术、RTMP/RTSP这类传统的视频流协议、HTTP-FLV/HLS这类基于 HTTP 的自适应协议，以及属于未来的新技术 WebRTC。在这个过程中，博主提到了 Flash 的衰落、HTML5 的崛起，即便你对于技术话题百分百无感，这些互联网世界里的奇闻佚事，或许还有机会成为一种怀念。而对于我说，如何在专业和活泼两者间完成取舍，同样是一件值得思考的事情，就像视频播放总要在带宽、画质、延迟、流量等因素上综合权衡一样。
 
 # 参考文章
-* [实时传输 Web 音频与视频]([https://developer.mozilla.org/zh-CN/docs/Web/Guide/Audio_and_video_delivery/Live_streaming_web_audio_and_video](https://developer.mozilla.org/zh-CN/docs/Web/Guide/Audio_and_video_delivery/Live_streaming_web_audio_and_video))
-* [秒懂流媒体协议 RTMP 与 RTSP]([https://zhuanlan.zhihu.com/p/519452302](https://zhuanlan.zhihu.com/p/519452302))
-* [流媒体协议 HLS ]([https://zhuanlan.zhihu.com/p/355136397](https://zhuanlan.zhihu.com/p/355136397))
-* [SRS - 介绍]([https://ossrs.net/lts/zh-cn/docs/v4/doc/introduction](https://ossrs.net/lts/zh-cn/docs/v4/doc/introduction))
+* [实时传输 Web 音频与视频](https://developer.mozilla.org/zh-CN/docs/Web/Guide/Audio_and_video_delivery/Live_streaming_web_audio_and_video)
+* [秒懂流媒体协议 RTMP 与 RTSP](https://zhuanlan.zhihu.com/p/519452302)
+* [流媒体协议 HLS ](https://zhuanlan.zhihu.com/p/355136397)
+* [SRS - 介绍](https://ossrs.net/lts/zh-cn/docs/v4/doc/introduction)
+* [有了 WebRTC ，直播可以这样玩！](https://juejin.cn/post/6964571538729205773)
+* [用 WebRTC 和 Node.js 开发实时视频聊天应用](https://webrtc.org.cn/20201119-nodejs/)
 
