通过 AI 生成摘要

--- a/content/posts/2017，在驻足间回首.md
+++ b/content/posts/2017，在驻足间回首.md
@@ -1,9 +1,9 @@
----
+﻿---
 abbrlink: 2676125676
 categories:
 - 生活感悟
 date: 2017-12-31 21:30:45
-description: ''
+description: 朋友圈集体缅怀18岁，进入00后时代，怀旧失去缅怀中，习惯性期盼更好的明天，新年前让记忆狂欢。作者回顾2017年，裴武刚离开西安，怀念旅途中的相处，离别后感情淡漠，思考爱情和人性。回顾学习做饭、读书、看电影，展望2018年的技术和生活目标，包括学习前端框架、Python数据分析、认真谈恋爱等。愿2018期望实现，被温柔对待，生活安稳。
 slug: 2676125676
 tags:
 - 总结
