--- a/content/posts/《仙剑奇侠传六》游戏感言.md
+++ b/content/posts/《仙剑奇侠传六》游戏感言.md
@@ -1,9 +1,9 @@
----
+﻿---
 abbrlink: 1118169753
 categories:
 - 单机游戏
 date: 2015-07-24 09:21:20
-description: ''
+description: 仙剑六作为仙剑系列的新作，在剧情、画面、建模、游戏性等方面引起了玩家的讨论和批评。玩家对游戏画面、建模、剧情发展和战斗系统等方面提出了批评，认为游戏在某些方面存在不足和问题，尤其是在战斗系统方面模仿FF13却未能成功，导致玩家体验下降。尽管官方在第三版补丁中进行了优化，但仍有改进空间。整体而言，玩家对仙剑六的期待和批评显示出他们对这个仙剑系列的热爱与关注。
 slug: 1118169753
 tags:
 - 仙剑奇侠传
