--- a/content/posts/一个关于概率的问题的思考.md
+++ b/content/posts/一个关于概率的问题的思考.md
@@ -1,9 +1,9 @@
----
+﻿---
 abbrlink: 3247186509
 categories:
 - 编程语言
 date: 2016-09-24 20:06:45
-description: ''
+description: 近期，作者在开发一个随机生成人员名单的工具时，思考了概率问题，特别是在活动中考虑到不同人员英语水平和优先级的公平性。通过设计概率算法和累积概率函数，作者提出了一个用于抽奖系统的设计方案，支持不同类型奖品和抽取方式。通过代码实现和示例展示，作者强调了在项目开发中应关注代码的扩展性和可维护性，以避免后期需求变更带来的困扰。整体内容涵盖了概率问题思考、设计方案实现和开发心得体会。
 slug: 3247186509
 tags:
 - 概率
