--- a/content/posts/不如归去.md
+++ b/content/posts/不如归去.md
@@ -3,14 +3,14 @@ abbrlink: 720539850
 categories:
 - 生活感悟
 date: 2017-10-21 22:31:48
-description: ''
+description: 这段文字主要描述了作者对回家与家人之间的情感纠葛和思考。作者在火车上回家的途中，回忆起与家人的关系，表达了对家人的思念和珍惜，以及对家的向往和渴望。作者感叹时间的流逝，意识到家人的年迈与等待，表达了对家人的爱和责任感。同时，作者也反思了自己对家人的陪伴和关怀，以及对成熟和人生意义的思考。整体表达了对家庭、亲情和归属感的珍视和思考。
+image: /posts/不如归去/cover.jpg
 slug: 720539850
 tags:
 - 回家
 - 成长
 - 亲情
 title: 不如归去
-image: /posts/不如归去/cover.jpg
 ---
 
 独自一个人在火车上望着窗外出神，而这种情景我再熟悉不过，或许风景会因为季节而不同，或许时间会因为年龄而不同，但对我而言，这个过程熟悉得就像一个我讲了无数遍的故事，从开篇布局到故事脉络都清楚到严丝合缝。印象中是从初中时候就开始寄宿生活，所以这种漂泊的感觉成为我生命里重要的烙印，而从那一刻起，我最期待的是寒暑假期，因为这象征着一段漂泊旅程的结束。大概是因为双子座属于风象星系，所以每次回家的旅程都伴随着忧愁风雨，我喜欢将这个过程理解为，生命不经意的装点。风有质而无形，或飞沙走石，或拈花弄叶；雨有质而无形，或坠散成珠，或凝聚成流。大概都是在世间漂泊的浪子，每一刻都摇曳不定。
