--- a/content/posts/不知老之将至.md
+++ b/content/posts/不知老之将至.md
@@ -3,14 +3,14 @@ abbrlink: 888549816
 categories:
 - 生活感悟
 date: 2020-01-01 08:46:24
-description: ''
+description: 时间无法阻止的流逝是残酷的，人们对时间的习惯和短暂性使得未来变得不确定。作者反思过去一年的遗憾和无所为，感慨时间的荒芜。工作压力和生活习惯的改变带来挑战，对于社会现实和医学伦理的思考。最终强调生命脆弱，呼吁尊重生命和医务人员。时间的流逝带来的变化和对过去的回顾，以及对生活的感悟和自省构成了文章的主要内容。
+image: /posts/不知老之将至/cover.jpg
 slug: 888549816
 tags:
 - 回顾
 - 2019
 - 年度
 title: 不知老之将至
-image: /posts/不知老之将至/cover.jpg
 ---
 
 我以为，时间是这个世界上最残忍的存在。因为，无论如何，你都无法阻止这如齿轮般互相咬合的时光机器，即使这世界上并没有所谓的“永动机”。习惯于沉默的时间之轮，你在或者不在，丝毫不影响它衡量宇宙万物的尺度。也许，是因为我们所拥有的时间太过短暂，所以，当一切都流失殆尽时，我们所能寄托的便只有不那么确定的未来。时间怎么会变得残忍呢？它无喜无悲俯视众生，倒像是一位入定参禅的老僧，有情感的分明是我们这些人类啊。
