--- a/content/posts/从 .NET Core 2.2 升级到 3.1 的踩坑之旅.md
+++ b/content/posts/从 .NET Core 2.2 升级到 3.1 的踩坑之旅.md
@@ -1,9 +1,11 @@
----
+﻿---
 abbrlink: 3099575458
 categories:
 - 编程语言
 date: 2020-01-22 10:23:08
-description: ''
+description: 在软件开发中，版本更新频繁可能导致API变动频繁，如.NET Core从1.x到3.x的快速更新。文章主要介绍了将项目从.NET Core
+  2.2升级到3.1的过程中遇到的问题和解决方法，涵盖了更新项目文件、程序入口、Startup配置、序列化以及一些常见问题的解决方案。需要注意的是.NET Core
+  3.0开始使用System.Text.Json替代Newtonsoft.json作为新一代JSON API，同时解决了SignalR项目中的大小写问题。还提到了更新Swashbuckle.AspNetCore版本以及调整Swagger中间件配置来解决类型加载问题，以及解决编译时找不到Microsoft.NET.Sdk.Web的方法。
 slug: 3099575458
 tags:
 - .NET Core
