--- a/content/posts/低代码，想说爱你不容易.md
+++ b/content/posts/低代码，想说爱你不容易.md
@@ -1,10 +1,10 @@
----
+﻿---
 abbrlink: 2637069146
 categories:
 - 编程语言
 copyright: true
 date: 2021-02-15 12:37:47
-description: ''
+description: 本文探讨了“低代码”这一热门话题的发展现状、国内外趋势以及产品形态。指出“低代码”产品主要包括表单生成、工作流生成、协同工作和服务聚合等形态。在对低代码研发痛点的讨论中，强调了多人协作困难、表达能力不足、变量混乱和动态计算等问题，同时提及了黑盒子问题和事件顺序的不确定性。最后，强调了对技术人员学习通用知识和技能的重要性，警示不要盲目追求“低代码”而应注重个人技术积累。
 slug: 2637069146
 tags:
 - 低代码
