--- a/content/posts/像诗人一样睿智，像天才一样疯狂.md
+++ b/content/posts/像诗人一样睿智，像天才一样疯狂.md
@@ -3,7 +3,7 @@ abbrlink: 3653716295
 categories:
 - 读书笔记
 date: 2016-10-01 17:12:43
-description: ''
+description: 在这篇文本中，作者探讨了程序员与艺术家的相似之处，强调程序员应当视代码为艺术品，追求代码的优雅与创造力。同时，提到了天才与普通人的区别、疯狂与创新的关系，以及对天才如图灵的理解和孤独感。文章还涉及了对生活、激情和不断探索的呼吁，以及在《模仿游戏》中描绘的图灵的故事，强调了对天才的理解和尊重。整体而言，文章探讨了热情、创新和执着对于成就和留下印记的重要性。
 slug: 3653716295
 tags:
 - 黑客
@@ -11,6 +11,7 @@ tags:
 - 诗人
 title: 像诗人一样睿智，像天才一样疯狂
 ---
+
 {{<douban type="movie" id="10463953">}}
 
 我不知道大家如何定义程序员这个工作，在我看来，在某种意义上，程序员和艺术家们具有相同之处，我们都是创作者，和诗人、画家、作家等等这些职业相近，我们都在试图创作出优秀的作品，我们借助编程语言来重构我们对这个世界的认识、借助抽象的概念来创造这个世界上不存在的东西，所以我们对自由和创造的渴望，来源自我们在这个世界上写下的第一行代码，或许这像是一个充满理想主义的臆想，可这并不重要，重要的是你如何看待这个世界、如何看待你自己，我更喜欢将程序员视为造梦者，就像每一个孩子在搭积木的时候，都有一个建筑师的梦一样，你可以选择让代码简洁、优雅，你同样选择让代码肮脏、丑陋，你相信什么，你执着什么，它就会是什么，所以为什么不给我们自己更多创造的机会。
