--- a/content/posts/再见-人间四月天.md
+++ b/content/posts/再见-人间四月天.md
@@ -3,7 +3,8 @@ categories:
 - 生活感悟
 copyright: true
 date: 2022-05-03 12:30:47
-description: ''
+description: 在这个文本中，作者描述了从外面回家的经历，感受到夜晚的氛围和市井生活的变化。他提到因疫情未能回家过五一假期，对家庭和放假的看法，以及与人的相遇带来的微妙体验。作者思考着对小孩、生活状态和回忆的态度，以及随着年龄增长对过往的理解。最后，他分享了对时尚、生活哲学和未来的思考。整体内容涵盖了家庭、生活体验、人际关系和个人成长等方面的感悟。
+image: /posts/再见-人间四月天/20220503221743.jpg
 slug: Say-Good-Bye-To-April
 tags:
 - 随笔
@@ -12,8 +13,8 @@ tags:
 - 感悟
 title: 再见，人间四月天
 toc: true
-image: /posts/再见-人间四月天/20220503221743.jpg
 ---
+
 {{<meting server="netease" type="song" id="541853">}}
 
 昨天从外面回来的时候，夕阳的余晖已被街市上的灯火掩没，直到渐渐地远离了闹市，夜晚的氛围终于在微风中扑面而来。抬头看时，深蓝色的天空中零星点缀着三两颗星星，我来不及驻足，已被人流裹挟着向前走去。像往常一样，我转身走进菜场，人依然是那些人，不过陌生和熟悉实在是两种风景，譬如眉清目秀的“豆腐西施”，陌生时你只觉得清冷，而熟悉时你会觉得杀伐果断。这一个月下来，卖菜的阿姨甚至记住了我，看我买了圆白菜、胡萝卜和洋葱，便问我是打算做炒面麽，我还是像过去一样点点头，她立马催促我抓紧时间去买面条，因为再晚一点就要收摊了。所幸的是，家里还有点面条，让我不必如此仓促、窘迫。
