--- a/content/posts/写在冬阳升起以前.md
+++ b/content/posts/写在冬阳升起以前.md
@@ -4,7 +4,8 @@ categories:
 - 生活感悟
 copyright: true
 date: 2021-11-26 08:48:41
-description: ''
+description: 这段文字探讨了作者在冬日清晨的思考，将内心疲惫比作水中的涟漪向外扩散。他认为工作本质上分为两种：一种是困难问题，需要智力投入；另一种是问题本身不难，但复杂度增加导致挑战。作者谈及游戏制作、工程装修等领域的复杂问题，以及工作中的沟通困境和个人实用主义倾向。他思考人生中的选择难题，强调选择比努力更重要的观点。整体表达对工作、生活中复杂性和选择困难的思考。
+image: /posts/写在冬阳升起以前/冬阳.jpg
 slug: 2145169599
 tags:
 - 随笔
@@ -12,7 +13,6 @@ tags:
 - 思考
 title: 写在冬阳升起以前
 toc: true
-image: /posts/写在冬阳升起以前/冬阳.jpg
 ---
 
 ![某个冬天的清晨](/posts/写在冬阳升起以前/冬阳.jpg)
