--- a/content/posts/函数式编程常用术语.md
+++ b/content/posts/函数式编程常用术语.md
@@ -1,9 +1,9 @@
 ﻿---
 abbrlink: 2171683728
-categories: 
+categories:
 - 读书笔记
 date: 2017-02-02 19:21:12
-description: ''
+description: 函数式编程作为一种编程范式在近年来逐渐流行，通过将计算机运算视为数学函数来避免状态和变量的概念。Lambda演算是函数式编程中的基础，函数式程序以表达式为主体，强调无状态和不可变性。常见术语包括高阶函数、柯里化、惰性求值等，这些术语在C#中得到了解释和应用。函数式编程的优点在于改善程序模块化程度，但缺点在于无法处理现实世界中的状态变化等问题。函数式编程应当视为一种编程思想的选择，而不是取代面向对象编程。函数式编程可能会作为面向对象编程的延伸和补充存在。
 slug: 2171683728
 tags:
 - 函数式编程
