--- a/content/posts/分享两种实现前端拖拽排序的方案.md
+++ b/content/posts/分享两种实现前端拖拽排序的方案.md
@@ -1,9 +1,9 @@
----
+﻿---
 abbrlink: 2436573863
 categories:
 - 前端开发
 date: 2019-03-31 12:49:37
-description: ''
+description: 在这篇文章中，作者分享了在前端中实现拖拽排序的三种方案：Nestable、Sortable和HTML5原生方案。Nestable是基于jQuery的插件，虽支持分层列表但已不再维护，不建议在正式项目中使用；Sortable支持多框架，文档完善且易用，是更优的选择；HTML5原生方案利用拖放API实现，虽存在兼容性问题但在现今浏览器环境下可行。总结建议根据实际需求选择合适的方案。
 slug: 2436573863
 tags:
 - 前端
