--- a/content/posts/前端视频播放技术概览.md
+++ b/content/posts/前端视频播放技术概览.md
@@ -1,10 +1,10 @@
-﻿
----
+﻿---
 categories:
 - 编程语言
 copyright: true
 date: 2023-07-15 13:32:47
-description: ''
+description: 2023年下半年，探讨了视频播放技术中的HTML5、RTMP、RTSP、HLS、FLV、WebRTC等内容。介绍了各种视频播放协议的特点和应用，以及搭建流媒体服务器的示例。探讨了Flash的消亡对视频播放领域的影响，以及前端技术的发展趋势。最后展望了未来的WebRTC技术在实时音视频通信方面的应用前景。文章内容涵盖了技术发展历史、实践应用和未来展望等方面，是一篇综合性的前端视频播放技术概览。
+image: /posts/前端视频播放技术概览/pexels-terje-sollie-320617.jpg
 slug: Overview-Of-Front-End-Video-Playback-Technology
 tags:
 - 流媒体
@@ -13,8 +13,8 @@ tags:
 - HLS
 title: 前端视频播放技术概览
 toc: true
-image: /posts/前端视频播放技术概览/pexels-terje-sollie-320617.jpg
 ---
+
 转眼间，2023 年已进入下半场，在这样一个时间节点下，长视频平台如爱奇艺、优酷、腾讯视频等，以及短视频平台如抖音、快手等，对大家来说早已是司空见惯的事物。然而，在我们追剧、刷弹幕的时候，很少有人会去深入思考这些平台背后的技术奥秘。直到最近，我需要在前端项目中实现视频播放时，我终于意识到，这些视频不仅在格式上存在着差异，甚至连播放形式都各有不同。举个例子，当下最为火热的 “**直播**”，通常是指实时的视频播放。相对应地，非实时的视频播放则被称为 “**点播**”。如果你有接触过 [Netflix]([https://about.netflix.com/zh_cn)，你或许还听说过 “**流媒体**” 这个词汇。为了更好地理解这些概念，我利用空闲时间整理了一个相对完整的技术体系，并以此为基础撰写了今天这篇文章。
 
 # 从 HTML5 说起
@@ -270,4 +270,3 @@ docker run --rm -it registry.cn-hangzhou.aliyuncs.com/ossrs/srs:encoder ffmpeg -
 * [SRS - 介绍](https://ossrs.net/lts/zh-cn/docs/v4/doc/introduction)
 * [有了 WebRTC ，直播可以这样玩！](https://juejin.cn/post/6964571538729205773)
 * [用 WebRTC 和 Node.js 开发实时视频聊天应用](https://webrtc.org.cn/20201119-nodejs/)
-
