--- a/content/posts/基于新浪微博的男女性择偶观数据分析-下.md
+++ b/content/posts/基于新浪微博的男女性择偶观数据分析-下.md
@@ -1,9 +1,9 @@
----
+﻿---
 abbrlink: 3083474169
 categories:
 - 数据分析
 date: 2018-03-17 15:28:40
-description: ''
+description: 这篇文章主要介绍了作者的数据分析过程，从文本分类的技术方法、TF-IDF与朴素贝叶斯的理论，到具体的数据分析包括年龄、性别、身高、地区和星座等方面。通过Python代码实现了对微博中男女性择偶观的分析，包括身高、地域分布、星座分布等，展示了数据可视化结果。文章总结了作者的心路历程和对数据分析的热情，呈现了一次全面而深入的数据探索过程。
 slug: 3083474169
 tags:
 - 朴素贝叶斯
