--- a/content/posts/实现网页长截图的常见思路总结.md
+++ b/content/posts/实现网页长截图的常见思路总结.md
@@ -1,10 +1,10 @@
----
+﻿---
 abbrlink: 3406626380
 categories:
 - 独立博客
 copyright: true
 date: 2021-01-09 20:37:47
-description: ''
+description: 作为一个经常在博客上分享内容的作者，对国内互联网丧失信仰感到担忧，指出厂商试图打造信息孤岛以增强用户黏度。分享了通过浏览器、Selenium、JavaScript和第三方工具实现网页长截图的方法，包括使用Chrome和Firefox的内置功能、Selenium库和html2canvas等工具。提到了几个在线服务如PickFrom和Tiomg，推荐使用Tiomg免费服务生成长截图。最后，提到了对技术含量较高的项目缺乏动力，分享了长截图实验经历。
 slug: 3406626380
 tags:
 - Python
