--- a/content/posts/当梦想照进现实.md
+++ b/content/posts/当梦想照进现实.md
@@ -1,9 +1,9 @@
----
+﻿---
 abbrlink: 3321992673
 categories:
 - 生活感悟
 date: 2015-03-10 10:45:51
-description: ''
+description: 这篇文章讲述了一位即将毕业的大四学生在回校的一周时间内面临的就业困境和对专业选择的犹豫。作者曾想到外地寻找工作，但在家人建议下先在宁夏找工作，却遇到了找工作困难和专业不符的问题。他反思自己对专业的选择和学业付出，以及对未来的迷茫和对技术和生活美好的向往。文章充满了对就业现状和自身职业发展的思考，表达了对未来的探寻和困惑。
 slug: 3321992673
 tags:
 - 梦想
