--- a/content/posts/教你一步步实现一个虚拟摇杆.md
+++ b/content/posts/教你一步步实现一个虚拟摇杆.md
@@ -1,9 +1,9 @@
----
+﻿---
 abbrlink: 331752533
 categories:
 - Unity3D
 date: 2015-10-30 09:44:18
-description: ''
+description: 秦元培在博客中分享了使用uGUI制作虚拟摇杆的过程。虚拟摇杆由背景层和控制层构成，通过计算2D向量判断移动方向。他展示了如何编写虚拟摇杆脚本，实现了触摸事件处理和移动逻辑分离。另外，他还展示了如何在3D模式下测试虚拟摇杆，包括角色朝向和移动控制。最终展示了虚拟摇杆在手机上的实际效果。
 slug: 331752533
 tags:
 - 游戏开发
