--- a/content/posts/我是猫，一只特立独行的猫.md
+++ b/content/posts/我是猫，一只特立独行的猫.md
@@ -3,7 +3,7 @@ abbrlink: 352037321
 categories:
 - 读书笔记
 date: 2018-03-06 08:57:48
-description: ''
+description: 夏目漱石的《我是猫》是一本以猫的视角叙述的小说，探讨了人类社会和知识分子的心理状态。通过猫的观察，揭示了人类的荒谬与困境，同时反映了日本文化中对猫的神圣地位。小说深刻刻画了人类与猫之间的关系，探讨了人类的自负和矛盾。作者以独特的视角呈现了对现实世界的讽刺和同情，探讨了人类的欲望和困境。通过猫的观察，小说揭示了人类社会的种种荒谬和无奈。
 slug: 352037321
 tags:
 - 夏目漱石
@@ -11,6 +11,7 @@ tags:
 - 我是猫
 title: 我是猫，一只特立独行的猫
 ---
+
 {{<douban type="book" id="30401846">}}
 
 终于在除夕夜到来前，在 Kindle 上读完了 2017 年的最后一本书，来自夏目漱石先生的《我是猫》。起初买这本书的动机说起来非常滑稽，一来以为这会是一本诙谐幽默的书，二来对夏目这个名字莫名地充满好感。我读的是曹曼翻译的中文译本，读时觉得这位作者的文字清新素雅，即使全书行文节奏堪称缓慢到极点，想来应该是我们这个时代的人物。及至翻阅作者生平，始知这位被誉为“国民大作家”的日本作家，早在 100 年前就在日本文学史上享有盛名。这种感觉如何去形容呢？大概就是杨过从剑冢石刻的寥寥数语中，遥想独孤求败"生平求一敌手而不可得"的寂寥难堪。这位老先生的文字可以说非常”摩登“了，因为在 100 年后的今天再次读来，竟完全读不出违和感来，所谓”嬉笑怒骂皆成文章“，讽刺与幽默杂然相陈，这是我喜欢这本书的理由。
