--- a/content/posts/浅议分布式链路追踪系统与日志系统的整合.md
+++ b/content/posts/浅议分布式链路追踪系统与日志系统的整合.md
@@ -3,8 +3,10 @@ categories:
 - 数据存储
 copyright: true
 date: 2022-10-15 12:30:47
-description: ''
-slug: Integration-Of-Distributed-Tracing-System-And-Logging-System 
+description: 最近阅读了一篇关于分布式链路追踪和日志系统整合的文章，主要介绍了在.NET中利用Activity、ActivitySource和ActivityListener等API实现分布式追踪的方法。这些API可以被视为微软对OpenTelemetry规范的实现，其中每个Activity对应一个Span。文章还介绍了如何利用自定义TraceId和NLog.DiagnosticSource等工具实现将TraceId渲染到日志中，以实现更好的日志查询和分析。最后，作者分享了如何利用OpenTelemetry
+  SDK自动采集HttpClient和ASP.NET Core的诊断信息，并探讨了分布式追踪与日志整合的实践方法。文章以深入浅出的方式介绍了相关概念和技术，提供了有关链路追踪和日志系统整合的有益见解。
+image: /posts/浅议分布式链路追踪系统与日志系统的整合/bridge.jpg
+slug: Integration-Of-Distributed-Tracing-System-And-Logging-System
 tags:
 - OpenTelemetry
 - Diagnostics
@@ -12,7 +14,6 @@ tags:
 - NLog
 title: 浅议分布式链路追踪与日志的整合
 toc: true
-image: /posts/浅议分布式链路追踪系统与日志系统的整合/bridge.jpg
 ---
 
 最近拜读了 [Artech](https://www.cnblogs.com/artech/) 大佬的新文章 [《几个Caller-特性的妙用》](https://www.cnblogs.com/artech/p/16769776.html)，可以说是受益匪浅。不过，对我而言，最大的收获当属这篇文章里的第二主角，即 [ActivitySource](System.Diagnostics.ActivitySource ) 和 [Activity](https://learn.microsoft.com/zh-cn/dotnet/api/system.diagnostics.activity)，这组 API 可以认为是微软针对 [OpenTelemetry](https://opentelemetry.io/) 规范的一种实现，即：每一个 `Activity` 都对应着一个 `Span` 。在以前的博客 [《Envoy 集成 Jaeger 实现分布式链路追踪》](/posts/768684858/) 中，我曾经向大家介绍过 OpenTelemetry 规范，并最终结合 Envoy 和 Jeager 实现了非侵入式的、网关层的分布式链路追踪，正所谓“**温故而知新**”，在这个过程中我意识到其中还有值得去挖掘的东西。譬如，可观测性的三大支柱分别是 `Logging`、`Tracing` 和 `Metrics` 。可当我们接入了 [Jeager](https://www.jaegertracing.io/) 、[Zipkin](https://zipkin.io/) 等等的链路追踪系统，我们会发现它和平用到日志系统如 [NLog](https://nlog-project.org/)、[Serilog](https://serilog.net/)、ELK ...等等都相去甚远，好像这两者间存在着一种天然的割裂感，你不得不在了解了服务间的调用关系以后，再一头扎进各种各样的日志文件里。幸运的是，经过数日的探索，我有了一点小小的收获。因此，今天这篇博客我想和大家分享的是，分布式链路追踪系统如何和日志系统进行整合。
