--- a/content/posts/源代码探案系列之 .NET Core 跨域中间件 CORS.md
+++ b/content/posts/源代码探案系列之 .NET Core 跨域中间件 CORS.md
@@ -1,10 +1,10 @@
----
+﻿---
 abbrlink: 1276287490
 categories:
 - 编程语言
 copyright: true
 date: 2021-03-16 21:25:47
-description: ''
+description: 本文探讨了ASP.NET Core中的CORS中间件，介绍了其核心流程和部件，包括CorsPolicy、CorsService和CorsMiddleware。讨论了跨域请求的处理流程，如预检请求和非预检请求的处理方式，以及如何应用CORS规范中的Access-Control系列头部字段。文章从源代码和规范两个角度深入探讨跨域问题的背景、发展以及CORS的原理和应用，涵盖了简单请求和复杂请求的区别。文章通过对CORS中间件和CORS规范的讨论，帮助读者全面理解跨域问题。
 slug: 1276287490
 tags:
 - 跨域
