--- a/content/posts/源代码探案系列之 .NET Core 限流中间件 AspNetCoreRateLimit.md
+++ b/content/posts/源代码探案系列之 .NET Core 限流中间件 AspNetCoreRateLimit.md
@@ -4,7 +4,7 @@ categories:
 - 编程语言
 copyright: true
 date: 2021-03-10 21:52:47
-description: ''
+description: 在今天这篇文章中，探讨了在分布式环境中限流中间件的重要性，引入了AspNetCoreRateLimit中间件，采用计数器算法实现限流功能，结合IMemoryCache和IDistributedCache实现基于内存和分布式缓存的持久化逻辑。详细介绍了RateLimitProcessor的实现，包括ClientRateLimitProcessor和IpRateLimitProcessor，以及其依赖的IRateLimitStore接口。另外，分析了AsyncKeyLock的实现，使用SpinLock实现了异步读写锁，提高了性能。最后，通过RateLimitMiddleware调用链路展示了中间件的整体执行过程。
 slug: 2396015802
 tags:
 - 限流
