--- a/content/posts/漫谈应用程序重试策略及其实现.md
+++ b/content/posts/漫谈应用程序重试策略及其实现.md
@@ -1,9 +1,9 @@
----
+﻿---
 abbrlink: 115524443
 categories:
 - 编程语言
 date: 2018-03-31 19:20:54
-description: ''
+description: 最近在项目联调中面临稳定性、文档维护和部署效率等问题，引发对如何更好地处理事务的思考。文章探讨了在开发过程中保证Web服务稳定性、降低文档维护成本以及提高多环境服务部署效率的挑战。通过一个简单的业务场景和代码演进展示了在面对复杂代码和重试策略时的思考过程。提出了Try-Catch-Redo、Try-Catch-Redo-Retry、Retry-Builder和装饰器/AOP等重试策略，并强调了重试策略核心理念。最后，介绍了一个简单的Retry实现，旨在优雅处理重试问题。文章强调了设计模式的重要性以及对应用程序重试策略的综合考虑。
 slug: 115524443
 tags:
 - 异常
