--- a/content/posts/聊聊前端跨域的爱恨情仇.md
+++ b/content/posts/聊聊前端跨域的爱恨情仇.md
@@ -1,9 +1,10 @@
----
+﻿---
 abbrlink: 3846545990
 categories:
 - 编程语言
 date: 2019-02-26 15:03:35
-description: ''
+description: 本文介绍了前端跨域的两种主流解决方案：JSONP和CORS。JSONP利用可执行的JavaScript返回数据，需要预先定义回调函数，仅支持GET请求。而CORS是官方推荐的跨域解决方案，通过HTTP头部信息来允许或禁止不同域下的资源访问，支持除GET外的请求动词。文章详细解释了两者的工作原理、实际应用和区别，同时展示了.NET
+  Core中如何配置CORS策略。通过示例演示了JSONP和CORS的实际应用过程和区别，总结了前端跨域问题的解决方案。
 slug: 3846545990
 tags:
 - 跨域
