--- a/content/posts/一个西漂打工人的求职心路.md
+++ b/content/posts/一个西漂打工人的求职心路.md
@@ -1,10 +1,10 @@
----
+﻿---
 abbrlink: 1809438689
 categories:
 - 生活感悟
 copyright: true
 date: 2020-11-18 12:49:47
-description: ''
+description: 这段文字描述了作者在工作和求职中的经历和思考。作者离职后面临选择两个Offer，但最终放弃，接连经历了多家公司的面试和工作，遇到了种种困境和挑战。作者对于西安IT行业的内卷现象和未来发展感到担忧，反思个人职业规划和生活状态。最后，提到对未来的思考和学习计划，表达了对自我提升的期许和对未来的迷茫。整体展现了对职业发展、生活状态和未来的思考和探索。
 slug: 1809438689
 tags:
 - 西漂
