--- a/content/posts/互联网黑洞读书笔记(1).md
+++ b/content/posts/互联网黑洞读书笔记(1).md
@@ -1,9 +1,9 @@
----
+﻿---
 abbrlink: 1478979553
 categories:
 - 读书笔记
 date: 2015-02-03 09:45:57
-description: ''
+description: 互联网时代的本质是数据和信息的交换，引发了转向以道德为动力的东方文明体系。互联网行业的属性将逐渐渗透到各行业，强调关系和互动。品牌代表稳定关系，包含实用性、信任度和荣誉感。人文与科技在人类文明中扮演不同角色，前者代表感受与传承，后者追求满足欲望。互联网的核心在于关系，需求驱动着关系建立。互联网思维强调与众不同和与己不同，倡导创新和发展活力。
 slug: 1478979553
 tags:
 - 互联网
