--- a/content/posts/使用.NET Core和Vue搭建WebSocket聊天室.md
+++ b/content/posts/使用.NET Core和Vue搭建WebSocket聊天室.md
@@ -3,7 +3,8 @@ abbrlink: 1989654282
 categories:
 - 编程语言
 date: 2018-08-01 15:42:23
-description: ''
+description: 本文介绍了WebSocket的基本概念和应用。WebSocket是建立在HTTP协议基础上的双向通信协议，弥补了HTTP协议请求-响应模型的不足，使客户端和服务器可以实现双向通信。文章以构建WebSocket聊天室为例，展示了如何在ASP.NET
+  Core中实现服务端WebSocket和使用原生WebSocket API和Vue实现客户端功能。另外，文章还介绍了ASP.NET Core中间件的概念和作用。通过实例展示了WebSocket握手请求和响应的过程，以及服务端如何响应WebSocket请求。文章深入浅出地解释了WebSocket的原理和应用，为读者提供了全面的了解和实践指导。
 slug: 1989654282
 tags:
 - WebSocket
