--- a/content/posts/秋风劲似去年时.md
+++ b/content/posts/秋风劲似去年时.md
@@ -1,9 +1,9 @@
----
+﻿---
 abbrlink: 2617501472
 categories:
 - 生活感悟
 date: 2017-09-25 00:56:50
-description: ''
+description: 这段文字描述了作者在连续阴雨天中的感慨和回忆，提及对过去的爱情和错过的时光的反思。他谈及对自己喜欢的女孩子的感受和变化，表达了对时间流逝和人生的深沉思考。同时，他探讨了关于成熟、感情和人生选择的思考。最后，他展示了对爱情和人生的美好幻想。
 slug: 2617501472
 tags:
 - 回忆
