--- a/content/posts/互联网黑洞读书笔记(2).md
+++ b/content/posts/互联网黑洞读书笔记(2).md
@@ -1,9 +1,9 @@
----
+﻿---
 abbrlink: 1930050594
 categories:
 - 读书笔记
 date: 2015-02-11 15:50:55
-description: ''
+description: 在移动互联网时代中，微信作为弄潮儿，走上平台化道路，各种商业模式探索微信的价值。微信在中国社会加强信任，降低交往成本。互联网的自由精神带来便利，同时与政治互动。互联网文明改变传统，全民制衡对社会有价值。互联网的人文属性体现在不同国家盈利模式差异。张小龙提出关系价值、本土实现和用户数据魔力。大数据时代来临，数据是机会。互联网本质是关系，重视搜索引擎是网络营销核心。
 slug: 1930050594
 tags:
 - 互联网
