--- a/content/posts/青黄未接的2015.md
+++ b/content/posts/青黄未接的2015.md
@@ -1,9 +1,9 @@
----
+﻿---
 abbrlink: 1394521917
 categories:
 - 生活感悟
 date: 2015-12-01 19:24:18
-description: ''
+description: 这段文字描述了作者在毕业后工作生活的挣扎和迷茫。作者决定不再从事本科专业相关工作，感受到内心对生活的不满和追求独特故事的渴望。对于父母的辛劳和衰老，作者有着无奈和内疚之情，感觉在小城市里的生活是对自己精神的亵渎。作者面对同龄人的房车结婚，感到自己的迟滞和无奈。在工作中遇到困难和失望，但希望在未来更加勇敢、努力，成熟自己，追求更好的生活。
 slug: 1394521917
 tags:
 - 成长
