--- a/content/posts/从 C# 1.0 到 C# 9.0，历代 C# 语言特性一览.md
+++ b/content/posts/从 C# 1.0 到 C# 9.0，历代 C# 语言特性一览.md
@@ -1,10 +1,11 @@
----
+﻿---
 abbrlink: 3918433482
 categories:
 - 编程语言
 copyright: true
 date: 2021-02-01 22:36:47
-description: ''
+description: C# 版本历史记录涵盖了 C# 7.0、8.0 和 9.0 的语法特性。C# 7.0 引入了元组、更多的 expression-bodied
+  成员、out 变量、异步 Main 方法、模式匹配和引发表达式等特性。C# 8.0 带来了默认接口方法、异步流和索引和范围。而 C# 9.0 则包括了 Record、顶级语句和模式匹配增强等新特性，如`record`类型的引入、顶级语句简化和模式匹配语法的增强。
 slug: 3918433482
 tags:
 - .NET
