--- a/content/posts/似花非花.md
+++ b/content/posts/似花非花.md
@@ -3,8 +3,9 @@ categories:
 - 生活感悟
 copyright: true
 date: 2022-11-11 12:30:47
-description: ''
-slug:  Like-Flowers-Not-Flowers
+description: 在周末独自游览大唐芙蓉园时，作者感受到时光变迁和疫情带来的冷静氛围。讨论了在繁华场所拍照的人际关系和纳什均衡理论，以及玩游戏《Stray》后的感悟，认为游戏以猫的视角讲述人类故事。描述了游戏结尾的牺牲和隐喻，引发对家乡和疫情的思考。最后谈及审美同质化、脸盲症的影响，以及马斯克的形象转变，探讨了现代社会的排异心理和人性的复杂性。
+image: /posts/似花非花/hd-wallpaper-g4698ef087_1280.jpg
+slug: Like-Flowers-Not-Flowers
 tags:
 - 生活
 - 随笔
@@ -12,7 +13,6 @@ tags:
 - 日常
 title: 似花还似非花
 toc: true
-image: /posts/似花非花/hd-wallpaper-g4698ef087_1280.jpg
 ---
 
 {{<meting server="netease" type="song" id="5280041">}}
@@ -34,6 +34,3 @@ image: /posts/似花非花/hd-wallpaper-g4698ef087_1280.jpg
 ![这一幕实在太像刺客信条啦！](/posts/似花非花/Stray_Screenshot_003.jpg)
 
 同样是以杨花作喻，苏轼写下这阙《水龙吟》的时候，想到是随风万里的飘摇不定，而百年前的东晋才女谢道韫，想到的则是雪满人间的轻盈皎洁。可是，灞桥的杨柳依依，李白的杨花落尽，又分明是同一种事物。我曾经感慨过新版 [《倚天屠龙记》](https://movie.douban.com/subject/25865815/) 里四女同舟的桥段，在审美越发趋于同质化、流水线的今天，我彻彻底底地变成一个脸盲症患者。等到如今再看 [《天下长河》](https://movie.douban.com/subject/35517425/) 的时候，虽然还是康熙、明珠、索额图这些熟悉的名字，可我始终不免旧疾复发。我想，脸盲症大抵是不区分颜值或是性别的，真正让你觉得似花非花的，是这个时代拼命想让所有人变得一样的“排异”心理。自从马斯克收购推特以后，他的话题热度就再没有下降过，只是这一次，让我们记住他的不再是火箭和特斯拉，而是裁员和加班。我有时候会怀疑，这个一直在追寻星辰大海的男人，到底是一个不折不扣的天才，还是一个彻头彻尾的资本家？也许，这两个都是呢？也许，似花非花、雾里看花的世界更显得真实一点……
-
-
-
