--- a/content/posts/作为技术宅的我，是这样追鬼滅の刃的.md
+++ b/content/posts/作为技术宅的我，是这样追鬼滅の刃的.md
@@ -4,7 +4,8 @@ categories:
 - 编程语言
 copyright: true
 date: 2020-12-15 22:49:47
-description: ''
+description: 这篇文章讨论了作者对动漫《鬼灭之刃》的热爱以及如何通过抓取漫画、制作电子书、制作表情包、生成视频和GIF等方式来追番和分享乐趣。作者表达了对热血少年漫的热爱和追求中二信仰的态度，以及对生活的乐观和勇敢面对困难的态度。文章展示了如何利用Python中的各种库和工具来实现这些创意。
+image: /posts/作为技术宅的我，是这样追鬼滅の刃的/cover.jpg
 slug: 3602353334
 tags:
 - 鬼滅の刃
@@ -14,8 +15,8 @@ tags:
 - Python
 title: 作为技术宅的我，是这样追鬼滅の刃的
 toc: true
-image: /posts/作为技术宅的我，是这样追鬼滅の刃的/cover.jpg
 ---
+
 {{<douban type="movie" id="30210221">}}
 
 有人说，“男人至死都是少年”，而这句听起来有一点中二的话，其实是出自一部同样有一点中二的动漫——银魂。我个人的理解是，知世故而不世故。也许，年轻时那些天马行空的想法，就像堂吉诃德大战风车一样荒诞，可依然愿意去怀着这样的梦想去生活。正如罗曼罗兰所言，**“世上只有一种英雄主义，就是在认清生活真相之后依然热爱生活”**。所以，继《浪客剑心》之后，我再次被一部叫做《鬼灭之刃》的动漫吸引，毕竟男人的快乐往往就是这么朴实无华且枯燥。一个快三十岁的人，如果还能被一部热血少年番吸引，大概可以说明，他身体里的中二少年连同中二少年魂还活着。最早的印象来自朋友圈里的一位二次元“少年”，他和自己儿子站一起，有种浑然天成的协调感，整个人是非常年轻的感觉。所以，大概，男人至死都是少年。
